writeup tier prop and count

--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -37,10 +37,11 @@ output:
 
 </style>
 ```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE, out.width = "100%")
 
-# datatable style
+# function to output customized HTML datatable with buttons
 dt_make <- function(x){
   x %>% 
     DT::datatable(
@@ -52,6 +53,9 @@ dt_make <- function(x){
     )
   )
 }
+
+# converts a float to a string with appropriate commas
+format_bign <- function(x) formatC(x, big.mark = ",", format = "d")
 ```
 
 *Jess Goddard, Rich Pauloo, Ryan Shepherd, Noor Brody*
@@ -124,13 +128,14 @@ The key result of this study is a nationwide water service boundary layer. Here 
 
 ## Tier distribution per state
 
-Interpret barplot below.
-
 ```{r load}
 library(tidyverse)
 library(tidymodels)
 library(sf)
 library(fs)
+library(knitr)
+library(rcartocolor)
+library(geofacet)
 
 # load environmental variable for staging path 
 staging_path <- Sys.getenv("WSB_STAGING_PATH")
@@ -138,28 +143,63 @@ staging_path <- Sys.getenv("WSB_STAGING_PATH")
 # service connection count cutoff for community water systems
 n_max <- 15
 
-# read the clean matched output and transform radius from m to km
+# read the clean matched output and perform minor transforms for plots
 d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
-  mutate(radius = radius/1000) %>% 
+  mutate(
+    # transform radius from m to km
+    radius = radius/1000,
+    # indicate the tier of the wsb
+    tier = case_when(
+      has_labeled_bound == TRUE ~ "Tier 1",
+      has_labeled_bound == FALSE & !is.na(tiger_match_geoid) ~ "Tier 2",
+      has_labeled_bound == FALSE & is.na(tiger_match_geoid)  ~ "Tier 3"
+    )
+  ) %>% 
   # filter to CWS and assume each connection must serve at least 1 person
   # this drop 267 rows (0.5% of data)
   filter(service_connections_count >= n_max,
          population_served_count   >= n_max)
+
+# popultion served by all water systems
+pop_total <- sum(d$population_served_count)
 ```
+
+In total, the TAMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by the `r nrow(d)` water systems. 
 
 ```{r geofacet tamm tier distribution per state}
-# read the final wsb layer
-
-# barplot geofacet that shows prop of population served by each tier
+# calculate count and proportion of people served by each tier
+pop <- d %>% 
+  group_by(tier) %>% 
+  summarize(
+    count = format_bign(sum(population_served_count)),
+    prop  = round((sum(population_served_count)/pop_total)*100, 2)
+  )
 ```
 
+`r str_sub(pop$count, 1, 3)[1]` million people are served by a Tier 1 explicit data layer, which is impressive for only `r wsb_labeled_clean$state %>% unique() %>% length()` states that provided explicit boundary data. However, these states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`) include notable high-population states like CA, TX, and PA. 
+
+Together, `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are served by either a Tier 1 or a Tier 2 spatial boundary. The remaining ~`r str_split(pop$count[3], ",", simplify = TRUE)[1]` million people (`r pop$prop[3]`%) are served by a Tier 3 system. These results indicate high confidence in the spatial accuracy of the resulting TAMM water boundary layer for community water systems. 
+
+```{r}
+pop %>% 
+  kable(col.names = c("Tier", "Population count", "Population proportion"))
+```
+
+
 ```{r datatable tamm tier distribution per state}
+# barplot geofacet that shows prop of population served by each tier
+
 # datatable of the above geofacet
 ```
 
 <br>
 
 # Tier 1: *Assimilated* boundaries
+
+
+```{r}
+wsb_labeled_clean <- st_read(path(staging_path, "wsb_labeled_clean.geojson")) 
+```
 
 Tier 1 explicit spatial boundary data is obtained from the following web addresses.
 
